# agrodrone

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
agrodrone/: CMakeLists.txt  package.xml  setup.py
agrodrone/launch/: agrodrone.launch  commander.launch  mavros.launch
agrodrone/src/lib/: mode.py  state.py  vehicle.py
agrodrone/src/modes/: autospray.py  inactive.py  modes.py
agrodrone/src/modes/states/: __init__.py  docked.py  end_spray.py  interrupt_spray.py  pending.py  position_above_dock.py  set_to_offboard.py  track_spray.py
agrodrone/src/nodes/: commander.py  tank_level_test.py
agrodrone/srv/: SetTankLevel.srv
agrodrone/tests/: field_test.py  integration_tests.test  run_sim.sh  vehicle_tests.test
agrodrone/tests/code/: modeTests.py
agrodrone/tests/integration/: arduMissionTest.txt  posctlTest.py  sprayMissionTest.py  surveyTest.mission
mavros_agrodrone/: CMakeLists.txt  mavros_plugins.xml  package.xml
mavros_agrodrone/launch/: tank_level_bc.launch
mavros_agrodrone/msg/: TankLevel.msg
mavros_agrodrone/src/plugins/: agro_mode.cpp  tank_level.cpp
mavros_agrodrone/tests/: agro_mode_test.py  tank_level_test.py
message_definitions/: README.md  agrodrone.xml
msg/: CompanionMode.msg
sprayer_controller/: CMakeLists.txt  README.md  package.xml
sprayer_controller/conf/: sprayer_controller_conf.yaml
sprayer_controller/include/sprayer_controller/: ShiftReg.h  pwmBit.h
sprayer_controller/launch/: sprayer_controller.launch
sprayer_controller/msg/: MotorSpeeds.msg
sprayer_controller/src/: sprayer_controller_node.cpp
sprayer_controller/src/lib/: ShiftReg.cpp  pwmBit.cpp
src/lib/: .state.py.swp  .vehicle.py.swp  mode.py  state.py  vehicle.py
src/modes/: RTD.py  __init__.py  autospray.py  modes.py  pending.py
src/modes/states/: .pending.py.swp  __init__.py  controlled_descend.py  end_spray.py  interrupt_spray.py  land_on_dock.py  move_above_dock.py  pending.py  resume_spray.py  track_spray.py
src/nodes/: commander.py
srv/: SetCompanionMode.srv
tank_sensor/: CMakeLists.txt  README.md  package.xml
tank_sensor/include/tank_sensor/: mcp3008Spi.cpp  mcp3008Spi.h
tank_sensor/launch/: tank_sensor.launch
tank_sensor/lib/: mcp3008Spi.cpp
tank_sensor/src/: tank_sensor.cpp  tank_sensor_node.cpp
tank_sensor/src/lib/: mcp3008Spi.cpp
tests/: integration_tests.test  vehicle_tests.test
tests/code/: modeTests.py
tests/integration/: arduMissionTest.txt  ardupilotSprayMission.mission  posctlTest.py  sprayMissionTest.py  sprayTest.mission  sprayTestSmall.mission
tests/node/: attctlTest.py  commanderTest.py  posctlTest.py
