<?xml version="1.0"?>
<package format="2">
  <name>mavros_agrodrone</name>
  <version>0.0.0</version>
  <description>The mavros_agrodrone package</description>

  <maintainer email="anne@todo.todo">anne</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>mavros</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <mavros plugin="${prefix}/mavros_plugins.xml" />
  </export>
</package>
