<?xml version="1.0"?>
<package>
  <name>sprayer_controller</name>
  <version>0.0.0</version>
  <description>
  This package is aimed to controll the pump and the sprinklers on the agro drone. 
  </description>

  <maintainer email="annesteenbeek@gmail.com">Anne Steenbeek</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
